--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
             <button class="botao">Montar um portifólio</button>
             <button class="botao">Estudar outras linguagens</button>
         </div> 
+        <div class="abas-textos">
+            <div class="aba-conteudo">
+                <h2 class="aba-conteudo-titulo-principal">
+                    Criar 3 projetos usando javascript
+                </h2>
+                <h3 class="aba-conteudo-titulo-secundario">
+                    TEMPO PARA CONCLUIR O OBJETIVO
+                </h3>
+            </div>
+        </div>
     </section>
     <script src="main.js"></script>
 </body>
