--- a/index.html
+++ b/index.html
@@ -24,6 +24,22 @@
                     TEMPO PARA CONCLUIR O OBJETIVO
                 </h3>
             </div>
+            <div class="aba-conteudo">
+                <h2 class="aba-conteudo-titulo-principal">
+                    FAZER 5 CURSOS DO JAVASCRIPT
+                </h2>
+                <h3 class="aba-conteudo-titulo-secundario">
+                    TEMPO PARA CONCLUIR O OBJETIVO
+                </h3>
+            </div>
+            <div class="aba-conteudo">
+                <h2 class="aba-conteudo-titulo-principal">
+                    Colocar no meu portifólio meus 3 novos projetos usando JavaScript
+                </h2>
+                <h3 class="aba-conteudo-titulo-secundario">
+                    TEMPO PARA CONCLUIR O OBJETIVO
+                </h3>
+            </div>
         </div>
     </section>
     <script src="main.js"></script>
