--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
                     TEMPO PARA CONCLUIR O OBJETIVO
                 </h3>
             </div>
+            <div class="aba-conteudo">
+                <h2 class="aba-conteudo-titulo-principal">
+                    Estudar outras linguagens
+                </h2>
+                <h3 class="aba-conteudo-titulo-secundario">
+                    TEMPO PARA CONCLUIR O OBJETIVO
+                </h3>
+            </div>
         </div>
     </section>
     <script src="main.js"></script>
