--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,19 +10,21 @@
 <body>
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus objetivos do ano<Span>_</Span></h2>
-        <div class="botoes"><button class="botao">Criar projetos</button>
+        <div class="conteudo">
+        <div class="botoes"><button class="botao ativo">Criar projetos</button>
             <button class="botao">Estudar JavaScript</button>
             <button class="botao">Montar um portifólio</button>
             <button class="botao">Estudar outras linguagens</button>
         </div> 
         <div class="abas-textos">
-            <div class="aba-conteudo">
+            <div class="aba-conteudo ativo">
                 <h2 class="aba-conteudo-titulo-principal">
                     Criar 3 projetos usando javascript
                 </h2>
                 <h3 class="aba-conteudo-titulo-secundario">
                     TEMPO PARA CONCLUIR O OBJETIVO
                 </h3>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
                 <h2 class="aba-conteudo-titulo-principal">
@@ -31,6 +33,7 @@
                 <h3 class="aba-conteudo-titulo-secundario">
                     TEMPO PARA CONCLUIR O OBJETIVO
                 </h3>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
                 <h2 class="aba-conteudo-titulo-principal">
@@ -38,7 +41,8 @@
                 </h2>
                 <h3 class="aba-conteudo-titulo-secundario">
                     TEMPO PARA CONCLUIR O OBJETIVO
-                </h3>
+                </h3><div class="contador"></div>
+
             </div>
             <div class="aba-conteudo">
                 <h2 class="aba-conteudo-titulo-principal">
@@ -47,8 +51,10 @@
                 <h3 class="aba-conteudo-titulo-secundario">
                     TEMPO PARA CONCLUIR O OBJETIVO
                 </h3>
+                <div class="contador"></div>
             </div>
         </div>
+    </div>
     </section>
     <script src="main.js"></script>
 </body>
