--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -41,8 +41,8 @@
                 </h2>
                 <h3 class="aba-conteudo-titulo-secundario">
                     TEMPO PARA CONCLUIR O OBJETIVO
-                </h3><div class="contador"></div>
-
+                </h3>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
                 <h2 class="aba-conteudo-titulo-principal">
