--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,7 +34,14 @@
                     <h3 class="aba-conteudo-titulo-secundario">
                         TEMPO PARA CONCLUIR O OBJETIVO
                     </h3>
-                    <div class="contador"></div>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <div class="contador-digito-numero">
+                            </div>
+                            <div class="contador-digito-texto">
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="aba-conteudo">
                     <h2 class="aba-conteudo-titulo-principal">
@@ -43,7 +50,14 @@
                     <h3 class="aba-conteudo-titulo-secundario">
                         TEMPO PARA CONCLUIR O OBJETIVO
                     </h3>
-                    <div class="contador"></div>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <div class="contador-digito-numero">
+                            </div>
+                            <div class="contador-digito-texto">
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="aba-conteudo">
                     <h2 class="aba-conteudo-titulo-principal">
@@ -52,7 +66,14 @@
                     <h3 class="aba-conteudo-titulo-secundario">
                         TEMPO PARA CONCLUIR O OBJETIVO
                     </h3>
-                    <div class="contador"></div>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <div class="contador-digito-numero">
+                            </div>
+                            <div class="contador-digito-texto">
+                            </div>
+                        </div>
+                    </div>
         </div>
          </div>
         </div>
